fix: Allow post meta to wrap on smaller screens.

--- a/themes/kelpie/assets/scss/components/posts/_post-meta.scss
+++ b/themes/kelpie/assets/scss/components/posts/_post-meta.scss
@@ -1,24 +1,16 @@
 /* Post meta (author, date, comments) */
 .kelpie-post-meta {
-    display: flex;
     list-style-type: none;
     justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.post-author {
-    @include typography(metadata, medium);
-    padding-left: get($spacing, "xxs");
-    padding-right: get($spacing, "xxs");
-}
-
-.post-date {
-    @include typography(metadata, medium);
-    padding-left: get($spacing, "xxs");
-    padding-right: get($spacing, "xxs");
-}
-
+.post-author,
+.post-date,
 .post-comment-link {
     @include typography(metadata, medium);
     padding-left: get($spacing, "xxs");
     padding-right: get($spacing, "xxs");
+    margin-bottom: get($spacing, "xxs");
 }
